# config_loader_pkg

./: DEVELOPERS_README.md  README.md  pyproject.toml  run.py
.github/workflows/: build.yml  coverage.yml  unittest.yml
.run/: Unittests.run.xml  run.run.xml
assets/: dummy_config_1.yml  dummy_config_2.yml
pm_config_loader/: __init__.py
src/config_loader/: __init__.py
src/pm_config_loader/: __init__.py
test/tests/fixtures/configs/: config.json  config.yaml
test/tests/unit/: test_config_loader.py
