[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pm_config_loader"
version = "0.0.1"
authors = [
  { name="Patrick Maul", email="maulpatrick1996@gmail.com" },
]
description = "This is a simple ConfigLoader with possibility to do a Env replace."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/PatrickMaul/config_loader_pkg"
"Bug Tracker" = "https://github.com/PatrickMaul/config_loader_pkg/issues"